--- a/calculator/index.html
+++ b/calculator/index.html
@@ -11,7 +11,7 @@
   <main class="main">
       <div class="calc">
         <div class="calc-display">
-          <input disabled type="text" id="display" value="0" name="" placeholder="000000000000000000" class="calc-display-input">
+          <input disabled type="text" id="display" name="" placeholder="000000000000000000" class="calc-display-input">
         </div>
         <div class="calc-buttons">
           <table class="calc-table">
@@ -23,12 +23,13 @@
                 <button type="button" class="clear-btn btn btn-hover-red" id="c">c</button>
               </td>
               <td>
-                <button type="button" class="operator btn btn-hover-orange">/</button>
+                <button type="button" class="btn  btn-hover-orange" id="decimal">.</button>
               </td>
               <td>
-                <button type="button" class=" operator btn btn-hover-orange">*</button>
+                <button type="button" class="operation btn btn-hover-orange">/</button>
               </td>
             </tr>
+
             <tr class="calc-buttons-row">
               <td>
                 <button type="button" class="number btn-hover-green btn">7</button>
@@ -40,9 +41,10 @@
                 <button type="button" class="number btn-hover-green btn">9</button>
               </td>
               <td>
-                <button type="button" class="operator btn btn-hover-orange">-</button>
+                <button type="button" class="operation btn btn-hover-orange">*</button>
               </td>
             </tr>
+
             <tr class="calc-buttons-row">
               <td>
                 <button type="button" class="number btn-hover-green btn">4</button>
@@ -54,9 +56,10 @@
                 <button type="button" class="number btn-hover-green btn">6</button>
               </td>
               <td>
-                <button type="button" class="operator btn btn-hover-orange">+</button>
+                <button type="button" class="operation btn btn-hover-orange">-</button>
               </td>
             </tr>
+
             <tr class="calc-buttons-row">
               <td>
                 <button type="button" class="number btn-hover-green btn">1</button>
@@ -67,23 +70,31 @@
               <td>
                 <button type="button" class="number btn-hover-green btn">3</button>
               </td>
-              <td rowspan="2">
-                <button type="button" class="operator btn btn-equal btn-hover-orange" id="result">=</button>
+              <td>
+                <button type="button" class="operation btn btn-hover-orange">+</button>
               </td>
             </tr>
+
             <tr class="calc-buttons-row">
-              <td colspan="2">
-                <button type="button" class="number btn-hover-green btn btn-long">0</button>
+              <td>
+                <button type="button" class="operation btn btn-hover-orange">X<sup>n</sup></button>
               </td>
               <td>
-                <button type="button" class="btn  btn-hover-orange" id="decimal">.</button>
+                <button type="button" class="number btn-hover-green btn">0</button>
+              </td>
+              <td>
+                <button type="button" class="operation btn btn-hover-orange">&#8730;</button>
+              </td>
+              <td>
+                  <button type="button" class="operation btn btn-hover-orange" id="result">=</button>
               </td>
             </tr>
+
           </table>
         </div>
       </div>
   </main>
-  <!-- <script src="my_script.js">
-  </script> -->
+  <script src="my_script.js">
+  </script>
 </body>
 </html>
