feat: implement single sqrt-button and operation, fix bug with odd root and exponentiation

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -26,10 +26,10 @@
                 <button type="button" class="operation btn btn-hover-orange">+/-</button>
               </td>
               <td>
-                
+                <button type="button" class="operation btn btn-hover-orange">&#8730;</button>
               </td>
               <td>
-                <button type="button" class="btn  btn-hover-orange" id="decimal">.</button>
+                <button type="button" class="operation btn btn-hover-orange"><sup>n</sup>&#8730;x</button>
               </td>
               <td>
                 <button type="button" class="operation btn btn-hover-orange">/</button>
@@ -83,14 +83,15 @@
 
             <tr class="calc-buttons-row">
               <td>
+                <button type="button" class="btn  btn-hover-orange" id="decimal">.</button>
+              </td>
+              <td>
                 <button type="button" class="operation btn btn-hover-orange">X<sup>n</sup></button>
               </td>
               <td>
                 <button type="button" class="number btn-hover-green btn">0</button>
               </td>
-              <td>
-                <button type="button" class="operation btn btn-hover-orange">&#8730;</button>
-              </td>
+              
               <td>
                   <button type="button" class="operation btn btn-hover-orange" id="result">=</button>
               </td>
