refactor: change styles & text in index

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -11,15 +11,15 @@
   <main class="main">
       <div class="annotation">
         <p>Корень квадратный вычисляется одинарным нажатием после числа (базы):<br>
-          <span>число (база) => кнопка &#8730;</span><br><br>
+          <span>число (база) > кнопка &#8730;</span><br>
           При попытке вычислить квадратный корень из отрицательного числа калькулятор выдаст ошибку.<br><br>
           Корень n-й степени из числа x набирать в следующей последовательности:<br>
-          <span>число (база) => кнопка <sup>n</sup>&#8730;x => степень => "равно"</span><br><br>
+          <span>число (база) > кнопка <sup>n</sup>&#8730;x > степень > "равно"</span><br>
           При отрицательной базе и нечетной степени корня или при нулевой степени калькулятор выдаст ошибку.<br><br>
           N-ю степень числа x набирать в следующей последовательности:<br>
-          <span>число (база) => кнопка X<sup>n</sup> => степень => "равно"</span><br><br>
+          <span>число (база) > кнопка X<sup>n</sup> > степень > "равно"</span><br><br>
           Изменение знака числа на противоположный набирать в следующей последовательности:<br>
-          <span>число (база) => кнопка "+/-" </span>
+          <span>число (база) > кнопка "+/-" </span>
 
 
 
@@ -45,7 +45,7 @@
                 <button type="button" class="operation btn btn-hover-orange">&#8730;</button>
               </td>
               <td>
-                <button type="button" class="operation btn btn-hover-orange"><sup>n</sup>&#8730;x</button>
+                <button type="button" class="operation btn btn-hover-orange"><sup class="button_sup">n</sup>&#8730;x</button>
               </td>
               <td>
                 <button type="button" class="operation btn btn-hover-orange">/</button>
@@ -102,7 +102,7 @@
                 <button type="button" class="btn  btn-hover-orange" id="decimal">.</button>
               </td>
               <td>
-                <button type="button" class="operation btn btn-hover-orange">X<sup>n</sup></button>
+                <button type="button" class="operation btn btn-hover-orange">X<sup class="button_sup">n</sup></button>
               </td>
               <td>
                 <button type="button" class="number btn-hover-green btn">0</button>
