--- a/shelter/pages/main/main.html
+++ b/shelter/pages/main/main.html
@@ -61,22 +61,23 @@
           <div class="friends__wrapper">
             <h3 class="friends__title">Our friends who<br> are looking for a house</h3>
             <div class="friends__img__wrapper">
+              <button type="button" class="pet__slider__arrow arrow__left"><img src="..\..\assets\icons\arrow.svg" alt="slider_arrow_left"></button>
               <div class="pet__card">
-                <div class="pet__picture"><img src="..\..\assets\pets-cat-katrine.png" alt="pets-cat-katrine"></div>
+                <div class="pet__picture"><img src="..\..\assets\pets-katrine.png" alt="pets-cat-katrine"></div>
                 <p class="pet__card__title">Katrine</p>
                 <button type="button" class="pet__card__button">Learn more</button>
               </div>
               <div class="pet__card">
-                <div class="pet__picture"><img src="..\..\assets\pets-dog-jennifer.png" alt="pets-cat-katrine"></div>
+                <div class="pet__picture"><img src="..\..\assets\pets-jennifer.png" alt="pets-cat-katrine"></div>
                 <p class="pet__card__title">Jennifer</p>
                 <button type="button" class="pet__card__button">Learn more</button>
               </div>
               <div class="pet__card">
-                <div class="pet__picture"><img src="..\..\assets\pets-dog-woody.png" alt="pets-cat-katrine"></div>
+                <div class="pet__picture"><img src="..\..\assets\pets-woody.png" alt="pets-cat-katrine"></div>
                 <p class="pet__card__title">Woody</p>
                 <button type="button" class="pet__card__button">Learn more</button>
               </div>
-              
+              <button type="button" class="pet__slider__arrow arrow__right"><img src="..\..\assets\icons\arrow.svg" alt="slider_arrow_right"></button>
             </div>
             <button type="button" class="friends__button">Get to know the rest</button>
             
@@ -138,7 +139,7 @@
               </h5>
               <div class="donation__card">
                 <img class="donation_card_icon" src="..\..\assets\icons\credit-card.svg" alt="credit-card">
-                <h4><a href="#" class="donation__card__link">   8380 2880 8028 8791 7435</a></h4>
+                <h4><a href="#" class="donation__card__link">  8380 2880 8028 8791 7435</a></h4>
               </div>
               <p class="donation__info">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.
               </p>
@@ -153,23 +154,23 @@
             <div class="footer__contact">
               <h3 class="footer__title">For questions and suggestions</h3>
               <div class="footer__email">
-                <img class="footer__icon" src="..\..\assets\icons\mail.svg" alt="e-mail">
-                <h4><a href="#" class="footer__link">email@shelter.com</a></h4>
+                <a href="mailto:email@shelter.com" target="_blank" class="footer__link"><img class="footer__icon" src="..\..\assets\icons\mail.svg" alt="e-mail"></a>
+                <h4><a href="mailto:email@shelter.com" target="_blank" class="footer__link">email@shelter.com</a></h4>
               </div>
               <div class="footer__phone">
-                <img class="footer__icon" src="..\..\assets\icons\telephone.svg" alt="phone">
-                <h4><a href="#" class="footer__link">+13 674 567 75 54</a></h4>
+                <a href="tel:+13 674 567 75 54" target="_blank" class="footer__link"><img class="footer__icon" src="..\..\assets\icons\telephone.svg" alt="phone"></a>
+                <h4><a href="tel:+13 674 567 75 54" target="_blank" class="footer__link">+13 674 567 75 54</a></h4>
               </div>
             </div>
             <div class="footer__location">
               <h3 class="footer__title">We are waiting for your visit</h3>
               <div class="footer__address">
-                <img class="footer__icon" src="..\..\assets\icons\pin.svg" alt="address1">
-                <h4><a href="#" class="footer__link">1 Central Street, Boston (entrance from the store)</a></h4>
+                <a href="https://www.google.ru/maps/place/1+Central+St,+Boston,+MA+02109,+%D0%A1%D0%A8%D0%90/@42.3585519,-71.056915,17z/data=!3m1!4b1!4m5!3m4!1s0x89e370868bc2ce7b:0x82fa7db94f5fea9e!8m2!3d42.3585519!4d-71.0547263" target="_blank" class="footer__link"><img class="footer__icon" src="..\..\assets\icons\pin.svg" alt="address1"></a>
+                <h4><a href="https://www.google.ru/maps/place/1+Central+St,+Boston,+MA+02109,+%D0%A1%D0%A8%D0%90/@42.3585519,-71.056915,17z/data=!3m1!4b1!4m5!3m4!1s0x89e370868bc2ce7b:0x82fa7db94f5fea9e!8m2!3d42.3585519!4d-71.0547263" target="_blank" class="footer__link">1 Central Street, Boston (entrance from the store)</a></h4>
               </div>
               <div class="footer__address">
-                <img class="footer__icon" src="..\..\assets\icons\pin.svg" alt="address2">
-                <h4><a href="#" class="footer__link">18 South Park, London</a></h4>
+                <a href="https://www.google.ru/maps/place/South+Park+Court,+18+S+Park+Rd,+London+SW19+8TD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@51.4202122,-0.2023441,17z/data=!3m1!4b1!4m5!3m4!1s0x487608baa7401b31:0x873a95ca58e122b2!8m2!3d51.4202122!4d-0.2001554" target="_blank" class="footer__link"><img class="footer__icon" src="..\..\assets\icons\pin.svg" alt="address2"></a>
+                <h4><a href="https://www.google.ru/maps/place/South+Park+Court,+18+S+Park+Rd,+London+SW19+8TD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@51.4202122,-0.2023441,17z/data=!3m1!4b1!4m5!3m4!1s0x487608baa7401b31:0x873a95ca58e122b2!8m2!3d51.4202122!4d-0.2001554" target="_blank" class="footer__link">18 South Park, London</a></h4>
               </div>  
             </div>
           </div>
