--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-        <title>Shelter. Main page</title>
+        <title>Shelter. Our pets</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
         <link rel="stylesheet" href="petstyles.css">
     </head>
@@ -18,8 +18,8 @@
           </div>
           <nav class="menu">
             <ul class="menu-list">
-              <li class="menu-item"><a href="#" class="item_link item_link_active">About the shelter</a></li>
-              <li class="menu-item"><a href="#" class="item_link item_link_disabled">Our pets</a></li>
+              <li class="menu-item"><a href="#" class="item_link item_link_disabled">About the shelter</a></li>
+              <li class="menu-item"><a href="#" class="item_link item_link_active">Our pets</a></li>
               <li class="menu-item"><a href="#" class="item_link item_link_disabled">Help the shelter</a></li>
               <li class="menu-item"><a href="#" class="item_link item_link_disabled">Contacts</a></li>
             </ul>
@@ -28,16 +28,92 @@
       </header>
       <!--Основная часть-->
       <main class="main">
-        <section class="hero">
-          <div class="hero__wrapper">
-            <div class="hero-content">
-              <h2 class="hero-title"> Not only people need a house</h2>
-              <p class="hero-subtitle">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
-              </p>
-              <button type="hero-button" class="hero__button">Make a friend</button>
+        <section class="pets">
+          <div class="pets__wrapper">
+            <h3 class="pets__title"> Our friends who <br>are looking for a house</h3>
+            <div class="cards__container">
+              <div class="pet__card">
+                <div class="pet__picture"><img src="..\..\assets\pets-katrine.png" alt="katrine"></div>
+                <p class="pet__card__title">Katrine</p>
+                <button type="button" class="pet__card__button">Learn more</button>
+              </div>
+              <div class="pet__card">
+                <div class="pet__picture"><img src="..\..\assets\pets-jennifer.png" alt="pets-jennifer"></div>
+                <p class="pet__card__title">Jennifer</p>
+                <button type="button" class="pet__card__button">Learn more</button>
+              </div>
+              <div class="pet__card">
+                <div class="pet__picture"><img src="..\..\assets\pets-woody.png" alt="pets-woody"></div>
+                <p class="pet__card__title">Woody</p>
+                <button type="button" class="pet__card__button">Learn more</button>
+              </div>
+              <div class="pet__card">
+                <div class="pet__picture"><img src="..\..\assets\pets-sophia.png" alt="pets-sophia"></div>
+                <p class="pet__card__title">Sophia</p>
+                <button type="button" class="pet__card__button">Learn more</button>
+              </div>
+              <div class="pet__card">
+                <div class="pet__picture"><img src="..\..\assets\pets-timmy.png" alt="pets-timmy"></div>
+                <p class="pet__card__title">Timmy</p>
+                <button type="button" class="pet__card__button">Learn more</button>
+              </div>
+              <div class="pet__card">
+                <div class="pet__picture"><img src="..\..\assets\pets-charly.png" alt="pets-charly"></div>
+                <p class="pet__card__title">Charly</p>
+                <button type="button" class="pet__card__button">Learn more</button>
+              </div>
+              <div class="pet__card">
+                <div class="pet__picture"><img src="..\..\assets\pets-scarlet.png" alt="pets-scarlet"></div>
+                <p class="pet__card__title">Scarlett</p>
+                <button type="button" class="pet__card__button">Learn more</button>
+              </div>
+              <div class="pet__card">
+                <div class="pet__picture"><img src="..\..\assets\pets-freddie.png" alt="pets-freddie"></div>
+                <p class="pet__card__title">Freddie</p>
+                <button type="button" class="pet__card__button">Learn more</button>
+              </div>
             </div>
-            <div class="hero-img">
-              <img src="..\..\assets\start-screen-puppy.png" alt="Hero-puppy">
+            <nav class="pets__nav__bar">
+                <button type="button" class="pets__nav__button nav__disabled">&lt;&lt;</button>
+                <button type="button" class="pets__nav__button nav__disabled">&lt;</button>
+                <button type="button" class="pets__nav__button page__number">1</button>
+                <button type="button" class="pets__nav__button nav__active">&gt;</button>
+                <button type="button" class="pets__nav__button nav__active">&gt;&gt;</button>
+            </nav>
+              
             </div>
           </div>
         </section>
+      </main>
+      <footer class="footer">
+        <div class="footer__wrapper">
+          <div class="footer_content">
+            <div class="footer__contact">
+              <h3 class="footer__title">For questions and suggestions</h3>
+              <div class="footer__email">
+                <a href="mailto:email@shelter.com" target="_blank" class="footer__link"><img class="footer__icon" src="..\..\assets\icons\mail.svg" alt="e-mail"></a>
+                <h4><a href="mailto:email@shelter.com" target="_blank" class="footer__link">email@shelter.com</a></h4>
+              </div>
+              <div class="footer__phone">
+                <a href="tel:+13 674 567 75 54" target="_blank" class="footer__link"><img class="footer__icon" src="..\..\assets\icons\telephone.svg" alt="phone"></a>
+                <h4><a href="tel:+13 674 567 75 54" target="_blank" class="footer__link">+13 674 567 75 54</a></h4>
+              </div>
+            </div>
+            <div class="footer__location">
+              <h3 class="footer__title">We are waiting for your visit</h3>
+              <div class="footer__address">
+                <a href="https://www.google.ru/maps/place/1+Central+St,+Boston,+MA+02109,+%D0%A1%D0%A8%D0%90/@42.3585519,-71.056915,17z/data=!3m1!4b1!4m5!3m4!1s0x89e370868bc2ce7b:0x82fa7db94f5fea9e!8m2!3d42.3585519!4d-71.0547263" target="_blank" class="footer__link"><img class="footer__icon" src="..\..\assets\icons\pin.svg" alt="address1"></a>
+                <h4><a href="https://www.google.ru/maps/place/1+Central+St,+Boston,+MA+02109,+%D0%A1%D0%A8%D0%90/@42.3585519,-71.056915,17z/data=!3m1!4b1!4m5!3m4!1s0x89e370868bc2ce7b:0x82fa7db94f5fea9e!8m2!3d42.3585519!4d-71.0547263" target="_blank" class="footer__link">1 Central Street, Boston (entrance from the store)</a></h4>
+              </div>
+              <div class="footer__address">
+                <a href="https://www.google.ru/maps/place/South+Park+Court,+18+S+Park+Rd,+London+SW19+8TD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@51.4202122,-0.2023441,17z/data=!3m1!4b1!4m5!3m4!1s0x487608baa7401b31:0x873a95ca58e122b2!8m2!3d51.4202122!4d-0.2001554" target="_blank" class="footer__link"><img class="footer__icon" src="..\..\assets\icons\pin.svg" alt="address2"></a>
+                <h4><a href="https://www.google.ru/maps/place/South+Park+Court,+18+S+Park+Rd,+London+SW19+8TD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@51.4202122,-0.2023441,17z/data=!3m1!4b1!4m5!3m4!1s0x487608baa7401b31:0x873a95ca58e122b2!8m2!3d51.4202122!4d-0.2001554" target="_blank" class="footer__link">18 South Park, London</a></h4>
+              </div>  
+            </div>
+          </div>
+          <div >
+            <img class="footer__img" src="..\..\assets\footer-puppy (1).png" alt="footer-puppy">
+          </div>
+        </div>
+      </footer>
+        
