feat: implement adaptive to mail and pets pages

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -47,35 +47,35 @@
                 <p class="pet__card__title">Woody</p>
                 <button type="button" class="pet__card__button">Learn more</button>
               </div>
-              <div class="pet__card">
+              <div class="pet__card pet__mobile">
                 <div class="pet__picture"><img src="..\..\assets\pets-sophia.png" alt="pets-sophia"></div>
                 <p class="pet__card__title">Sophia</p>
                 <button type="button" class="pet__card__button">Learn more</button>
               </div>
-              <div class="pet__card">
+              <div class="pet__card pet__mobile">
                 <div class="pet__picture"><img src="..\..\assets\pets-timmy.png" alt="pets-timmy"></div>
                 <p class="pet__card__title">Timmy</p>
                 <button type="button" class="pet__card__button">Learn more</button>
               </div>
-              <div class="pet__card">
+              <div class="pet__card pet__mobile">
                 <div class="pet__picture"><img src="..\..\assets\pets-charly.png" alt="pets-charly"></div>
                 <p class="pet__card__title">Charly</p>
                 <button type="button" class="pet__card__button">Learn more</button>
               </div>
-              <div class="pet__card">
+              <div class="pet__card  pet__tablet pet__mobile">
                 <div class="pet__picture"><img src="..\..\assets\pets-scarlet.png" alt="pets-scarlet"></div>
                 <p class="pet__card__title">Scarlett</p>
                 <button type="button" class="pet__card__button">Learn more</button>
               </div>
-              <div class="pet__card">
+              <div class="pet__card pet__tablet pet__mobile">
                 <div class="pet__picture"><img src="..\..\assets\pets-freddie.png" alt="pets-freddie"></div>
                 <p class="pet__card__title">Freddie</p>
                 <button type="button" class="pet__card__button">Learn more</button>
               </div>
             </div>
             <nav class="pets__nav__bar">
-                <button type="button" class="pets__nav__button nav__disabled">&lt;&lt;</button>
-                <button type="button" class="pets__nav__button nav__disabled">&lt;</button>
+                <button type="button" class="pets__nav__button nav__disabled" disabled>&lt;&lt;</button>
+                <button type="button" class="pets__nav__button nav__disabled" disabled>&lt;</button>
                 <button type="button" class="pets__nav__button page__number">1</button>
                 <button type="button" class="pets__nav__button nav__active">&gt;</button>
                 <button type="button" class="pets__nav__button nav__active">&gt;&gt;</button>
