--- a/shelter/pages/main/main.html
+++ b/shelter/pages/main/main.html
@@ -20,7 +20,7 @@
           <nav class="menu">
             <ul class="menu-list">
               <li class="menu-item"><a href="#" class="item_link item_link_active">About the shelter</a></li>
-              <li class="menu-item"><a href="#" class="item_link item_link_disabled">Our pets</a></li>
+              <li class="menu-item"><a href="..\..\pages\pets\index.html" class="item_link item_link_disabled">Our pets</a></li>
               <li class="menu-item"><a href="#" class="item_link item_link_disabled">Help the shelter</a></li>
               <li class="menu-item"><a href="#" class="item_link item_link_disabled">Contacts</a></li>
             </ul>
