fix: fix transitions to main page and back on button click

--- a/shelter/pages/main/main.html
+++ b/shelter/pages/main/main.html
@@ -38,7 +38,7 @@
               </h2>
               <p class="hero-subtitle">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
               </p>
-              <button type="hero-button" class="hero__button">Make a friend</button>
+              <a href="..\..\pages\pets\index.html"><button type="hero-button" class="hero__button">Make a friend</button></a>
             </div>
             <div class="hero-img">
               <img class="hero__img__content" src="..\..\assets\start-screen-puppy.png" alt="Hero-puppy">
@@ -86,7 +86,7 @@
               </div>
               <button type="button" class="pet__slider__arrow arrow__right"><img src="..\..\assets\icons\arrow.svg" alt="slider_arrow_right"></button>
             </div>
-            <button type="button" class="friends__button">Get to know the rest</button>
+            <a href="..\..\pages\pets\index.html"><button type="button" class="friends__button">Get to know the rest</button></a> 
             
           </div>
         </section>
