--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -12,13 +12,15 @@
       <header class="header">
         <h1 class="visually-hidden">Cozy House</h1>
         <div class="header_container">
-          <div class="logo">
-            <div class="logo-title">Cozy House</div>
-            <div class="logo-subtitle">Shelter for pets in Boston</div>
-          </div>
+          <a href="..\..\pages\main\main.html">
+            <div class="logo">
+              <div class="logo-title">Cozy House</div>
+              <div class="logo-subtitle">Shelter for pets in Boston</div>
+            </div>
+          </a>
           <nav class="menu">
             <ul class="menu-list">
-              <li class="menu-item"><a href="#" class="item_link item_link_disabled">About the shelter</a></li>
+              <li class="menu-item"><a href="..\..\pages\main\main.html" class="item_link item_link_disabled">About the shelter</a></li>
               <li class="menu-item"><a href="#" class="item_link item_link_active">Our pets</a></li>
               <li class="menu-item"><a href="#" class="item_link item_link_disabled">Help the shelter</a></li>
               <li class="menu-item"><a href="#" class="item_link item_link_disabled">Contacts</a></li>
